--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Architecture Template | DEVPHENOMENAL</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8231232270565196"
      crossorigin="anonymous"></script>
+<!-- testing -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8231232270565196"
+     data-ad-slot="4025046274"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </head>
   <body>
     <header>
