--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1660972,0,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+
   </head>
   <body>
     <header>
