--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </p>
     </footer>
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1660973,11,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/tab.js"></script><script type="text/javascript">var sc_tab_var = sc_tab_var || [];sc_tab(1660974,"bottom","center")</script><br><noscript><a href="http://www.supercounters.com/">free Online Counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
 
