--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </p>
     </footer>
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/tab.js"></script><script type="text/javascript">var sc_tab_var = sc_tab_var || [];sc_tab(1660974,"bottom","center")</script><br><noscript><a href="http://www.supercounters.com/">free Online Counter</a></noscript>
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/flag.js"></script><script type="text/javascript">sc_flag(1660978,"FFFFFF","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
 
