--- a/index.html
+++ b/index.html
@@ -170,11 +170,9 @@
         powered by
         <a href="https://wa.me/message/KH2LRJFYI45KG1">Devphenomenal</a>
       </p>
-    </footer>
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/flag.js"></script><script type="text/javascript">sc_flag(1660978,"FFFFFF","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
+    </footer><!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/flag.js"></script><script type="text/javascript">sc_flag(1660979,"ff","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
-right now and I don't know what to say to someone who does that work for you guys are doing well and good luck with 
-  </body>
+</body>
 </html>
