--- a/index.html
+++ b/index.html
@@ -7,16 +7,6 @@
     <title>Architecture Template | DEVPHENOMENAL</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8231232270565196"
      crossorigin="anonymous"></script>
-<!-- testing -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-8231232270565196"
-     data-ad-slot="4025046274"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
   </head>
   <body>
     <header>
@@ -170,9 +160,6 @@
         powered by
         <a href="https://wa.me/message/KH2LRJFYI45KG1">Devphenomenal</a>
       </p>
-    </footer><!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/flag.js"></script><script type="text/javascript">sc_flag(1660979,"ff","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
+    </footer>
 </body>
 </html>
